--- a/dashboard/app/prime-theme/theme-base/components/data/_tree.scss
+++ b/dashboard/app/prime-theme/theme-base/components/data/_tree.scss
@@ -1,9 +1,9 @@
 .p-tree {
-    //border: $panelContentBorder;
-    //background: $panelContentBg;
-    //color: $panelContentTextColor;
+    border: $panelContentBorder;
+    background: $panelContentBg;
+    color: $panelContentTextColor;
     //padding: $panelContentPadding;
-    //border-radius: $borderRadius;
+    border-radius: $borderRadius;
 
     .p-tree-container {
         .p-treenode {
@@ -15,7 +15,7 @@
             }
 
             .p-treenode-content {
-                //border-radius: $borderRadius;
+                border-radius: $borderRadius;
                 transition: $listItemTransition;
                 //padding: $treeNodeContentPadding;
 
@@ -24,10 +24,10 @@
                 //    @include action-icon();
                 //}
                 //
-                //.p-treenode-icon {
+                .p-treenode-icon {
                 //    margin-right: $inlineSpacing;
-                //    color: $treeNodeIconColor;
-                //}
+                    color: $treeNodeIconColor;
+                }
 
                 .p-checkbox {
                     margin-right: $inlineSpacing;
@@ -39,24 +39,24 @@
                     }
                 }
 
-                //&.p-highlight {
-                //    background: $highlightBg;
-                //    color: $highlightTextColor;
-                //
-                //    .p-tree-toggler,
-                //    .p-treenode-icon {
-                //        color: $highlightTextColor;
-                //
-                //        &:hover {
-                //            color: $highlightTextColor;
-                //        }
-                //    }
-                //}
-                //
-                //&.p-treenode-selectable:not(.p-highlight):hover {
-                //    background: $inputListItemHoverBg;
-                //    color: $inputListItemTextHoverColor;
-                //}
+                &.p-highlight {
+                    background: $highlightBg;
+                    color: $highlightTextColor;
+
+                    .p-tree-toggler,
+                    .p-treenode-icon {
+                        color: $highlightTextColor;
+
+                        &:hover {
+                            color: $highlightTextColor;
+                        }
+                    }
+                }
+
+                &.p-treenode-selectable:not(.p-highlight):hover {
+                    background: $inputListItemHoverBg;
+                    color: $inputListItemTextHoverColor;
+                }
             }
         }
     }
