--- a/dashboard/app/prime-theme/theme-base/components/input/_dropdown.scss
+++ b/dashboard/app/prime-theme/theme-base/components/input/_dropdown.scss
@@ -1,17 +1,17 @@
 .p-dropdown {
-    //background: $inputBg;
-    //border: $inputBorder;
-    //transition: $formElementTransition;
-    //border-radius: $borderRadius;
+    background: $inputBg;
+    border: $inputBorder;
+    transition: $formElementTransition;
+    border-radius: $borderRadius;
     outline-color: transparent;
 
     &:not(.p-disabled):hover {
         border-color: $inputHoverBorderColor;
     }
 
-    //&:not(.p-disabled).p-focus {
-    //    @include focused-input();
-    //}
+    &:not(.p-disabled).p-focus {
+        @include focused-input();
+    }
 
     &.p-dropdown-clearable {
         .p-dropdown-label {
@@ -19,45 +19,45 @@
         }
     }
 
-    //.p-dropdown-label {
-    //    background: transparent;
-    //    border: 0 none;
-    //
-    //    &.p-placeholder {
-    //        color: $inputPlaceholderTextColor;
-    //    }
-    //
-    //    &:focus,
-    //    &:enabled:focus {
-    //        outline: 0 none;
-    //        box-shadow: none;
-    //    }
-    //}
-    //
-    //.p-dropdown-trigger {
-    //    background: transparent;
-    //    color: $inputIconColor;
-    //    width: $inputGroupAddOnMinWidth;
-    //    border-top-right-radius: $borderRadius;
-    //    border-bottom-right-radius: $borderRadius;
-    //}
+    .p-dropdown-label {
+        background: transparent;
+        border: 0 none;
+
+        &.p-placeholder {
+            color: $inputPlaceholderTextColor;
+        }
+
+        &:focus,
+        &:enabled:focus {
+            outline: 0 none;
+            box-shadow: none;
+        }
+    }
+
+    .p-dropdown-trigger {
+        background: transparent;
+        color: $inputIconColor;
+        //width: $inputGroupAddOnMinWidth;
+        border-top-right-radius: $borderRadius;
+        border-bottom-right-radius: $borderRadius;
+    }
 
     .p-dropdown-clear-icon {
         color: $inputIconColor;
         right: $inputGroupAddOnMinWidth;
     }
 
-    //&.p-invalid.p-component {
-    //    @include invalid-input();
-    //}
+    &.p-invalid.p-component {
+        @include invalid-input();
+    }
 }
 
 .p-dropdown-panel {
-    //background: $inputOverlayBg;
-    //color: $inputListTextColor;
-    //border: $inputOverlayBorder;
-    //border-radius: $borderRadius;
-    //box-shadow: $inputOverlayShadow;
+    background: $inputOverlayBg;
+    color: $inputListTextColor;
+    border: $inputOverlayBorder;
+    border-radius: $borderRadius;
+    box-shadow: $inputOverlayShadow;
 
     .p-dropdown-header {
         padding: $inputListHeaderPadding;
@@ -85,11 +85,11 @@
         .p-dropdown-item {
             //margin: $inputListItemMargin;
             //padding: $inputListItemPadding;
-            //border: $inputListItemBorder;
-            //color: $inputListItemTextColor;
-            //background: $inputListItemBg;
+            border: $inputListItemBorder;
+            color: $inputListItemTextColor;
+            background: $inputListItemBg;
             transition: $listItemTransition;
-            //border-radius: $inputListItemBorderRadius;
+            border-radius: $inputListItemBorderRadius;
 
             &:first-child {
                 margin-top: 0;
@@ -99,14 +99,14 @@
                 margin-bottom: 0;
             }
 
-            //&.p-highlight {
-            //    color: $highlightTextColor;
-            //    background: $highlightBg;
-            //
-            //    &.p-focus {
-            //        background: $highlightFocusBg;
-            //    }
-            //}
+            &.p-highlight {
+                color: $highlightTextColor;
+                background: $highlightBg;
+
+                &.p-focus {
+                    background: $highlightFocusBg;
+                }
+            }
 
             &:not(.p-highlight):not(.p-disabled) {
                 &.p-focus {
@@ -138,20 +138,20 @@
     }
 }
 
-//.p-input-filled {
-//    .p-dropdown {
-//        background: $inputFilledBg;
-//
-//        &:not(.p-disabled):hover {
-//            background-color: $inputFilledHoverBg;
-//        }
-//
-//        &:not(.p-disabled).p-focus {
-//            background-color: $inputFilledFocusBg;
-//
-//            .p-inputtext {
-//                background-color: transparent;
-//            }
-//        }
-//    }
-//}
+.p-input-filled {
+    .p-dropdown {
+        background: $inputFilledBg;
+
+        &:not(.p-disabled):hover {
+            background-color: $inputFilledHoverBg;
+        }
+
+        &:not(.p-disabled).p-focus {
+            background-color: $inputFilledFocusBg;
+
+            .p-inputtext {
+                background-color: transparent;
+            }
+        }
+    }
+}
