--- a/dashboard/app/prime-theme/theme-base/components/input/_treeselect.scss
+++ b/dashboard/app/prime-theme/theme-base/components/input/_treeselect.scss
@@ -1,28 +1,28 @@
 @use 'sass:math';
 
 .p-treeselect {
-    //background: $inputBg;
-    //border: $inputBorder;
-    //transition: $formElementTransition;
-    //border-radius: $borderRadius;
+    background: $inputBg;
+    border: $inputBorder;
+    transition: $formElementTransition;
+    border-radius: $borderRadius;
     outline-color: transparent;
 
-    //&:not(.p-disabled):hover {
-    //    border-color: $inputHoverBorderColor;
-    //}
+    &:not(.p-disabled):hover {
+        border-color: $inputHoverBorderColor;
+    }
 
-    //&:not(.p-disabled).p-focus {
-    //    @include focused-input();
-    //}
+    &:not(.p-disabled).p-focus {
+        @include focused-input();
+    }
 
-    //.p-treeselect-label {
-    //    padding: $inputPadding;
-    //    transition: $formElementTransition;
-    //
-    //    &.p-placeholder {
-    //        color: $inputPlaceholderTextColor;
-    //    }
-    //}
+    .p-treeselect-label {
+        //padding: $inputPadding;
+        transition: $formElementTransition;
+
+        &.p-placeholder {
+            color: $inputPlaceholderTextColor;
+        }
+    }
 
     &.p-treeselect-chip {
         .p-treeselect-token {
@@ -34,17 +34,17 @@
         }
     }
 
-    //.p-treeselect-trigger {
-    //    background: transparent;
-    //    color: $inputIconColor;
-    //    width: $inputGroupAddOnMinWidth;
-    //    border-top-right-radius: $borderRadius;
-    //    border-bottom-right-radius: $borderRadius;
-    //}
-    //
-    //&.p-invalid.p-component {
-    //    @include invalid-input();
-    //}
+    .p-treeselect-trigger {
+        background: transparent;
+        color: $inputIconColor;
+        //width: $inputGroupAddOnMinWidth;
+        border-top-right-radius: $borderRadius;
+        border-bottom-right-radius: $borderRadius;
+    }
+
+    &.p-invalid.p-component {
+        @include invalid-input();
+    }
 }
 
 //.p-inputwrapper-filled {
@@ -58,11 +58,11 @@
 //}
 
 .p-treeselect-panel {
-    //background: $inputOverlayBg;
-    //color: $inputListTextColor;
-    //border: $inputOverlayBorder;
-    //border-radius: $borderRadius;
-    //box-shadow: $inputOverlayShadow;
+    background: $inputOverlayBg;
+    color: $inputListTextColor;
+    border: $inputOverlayBorder;
+    border-radius: $borderRadius;
+    box-shadow: $inputOverlayShadow;
 
     .p-treeselect-items-wrapper {
         .p-tree {
@@ -77,16 +77,16 @@
     }
 }
 
-//.p-input-filled {
-//    .p-treeselect {
-//        background: $inputFilledBg;
-//
-//        &:not(.p-disabled):hover {
-//            background-color: $inputFilledHoverBg;
-//        }
-//
-//        &:not(.p-disabled).p-focus {
-//            background-color: $inputFilledFocusBg;
-//        }
-//    }
-//}
+.p-input-filled {
+    .p-treeselect {
+        background: $inputFilledBg;
+
+        &:not(.p-disabled):hover {
+            background-color: $inputFilledHoverBg;
+        }
+
+        &:not(.p-disabled).p-focus {
+            background-color: $inputFilledFocusBg;
+        }
+    }
+}
