--- a/dashboard/app/prime-theme/theme-base/components/menu/_tabmenu.scss
+++ b/dashboard/app/prime-theme/theme-base/components/menu/_tabmenu.scss
@@ -1,51 +1,51 @@
 .p-tabmenu {
     .p-tabmenu-nav {
-        //background: $tabviewNavBg;
-        //border: $tabviewNavBorder;
-        //border-width: $tabviewNavBorderWidth;
+        background: $tabviewNavBg;
+        border: $tabviewNavBorder;
+        border-width: $tabviewNavBorderWidth;
 
         .p-tabmenuitem {
             //margin-right: $tabviewHeaderSpacing;
 
             .p-menuitem-link {
                 // jb - border like tailwind ui tabs
-                //border: $tabviewHeaderBorder;
-                //border-width: $tabviewHeaderBorderWidth;
-                //border-color: $tabviewHeaderBorderColor;
-                //background: $tabviewHeaderBg;
-                //color: $tabviewHeaderTextColor;
+                border: $tabviewHeaderBorder;
+                border-width: $tabviewHeaderBorderWidth;
+                border-color: $tabviewHeaderBorderColor;
+                background: $tabviewHeaderBg;
+                color: $tabviewHeaderTextColor;
                 //padding: $tabviewHeaderPadding;
                 //font-weight: $tabviewHeaderFontWeight;
-                //border-top-right-radius: $borderRadius;
-                //border-top-left-radius: $borderRadius;
-                //transition: $listItemTransition;
+                border-top-right-radius: $borderRadius;
+                border-top-left-radius: $borderRadius;
+                transition: $listItemTransition;
                 //margin: $tabviewHeaderMargin;
-                //outline-color: transparent;
+                outline-color: transparent;
                 //
                 //.p-menuitem-icon {
                 //    margin-right: $inlineSpacing;
                 //}
                 //
-                //&:not(.p-disabled):focus-visible {
-                //    @include focused-inset();
-                //}
+                &:not(.p-disabled):focus-visible {
+                    @include focused-inset();
+                }
             }
 
             &:not(.p-highlight):not(.p-disabled):hover {
                 .p-menuitem-link {
-                    //background: $tabviewHeaderHoverBg;
-                    //border-color: $tabviewHeaderHoverBorderColor;
-                    //color: $tabviewHeaderTextHoverColor;
+                    background: $tabviewHeaderHoverBg;
+                    border-color: $tabviewHeaderHoverBorderColor;
+                    color: $tabviewHeaderTextHoverColor;
                 }
             }
 
-            //&.p-highlight {
-            //    .p-menuitem-link {
-            //        background: $tabviewHeaderActiveBg;
-            //        border-color: $tabviewHeaderActiveBorderColor;
-            //        color: $tabviewHeaderTextActiveColor;
-            //    }
-            //}
+            &.p-highlight {
+                .p-menuitem-link {
+                    background: $tabviewHeaderActiveBg;
+                    border-color: $tabviewHeaderActiveBorderColor;
+                    color: $tabviewHeaderTextActiveColor;
+                }
+            }
         }
     }
 }
