--- a/dashboard/app/prime-theme/theme-base/_components.scss
+++ b/dashboard/app/prime-theme/theme-base/_components.scss
@@ -99,7 +99,7 @@
   //@import './components/misc/_inplace';
   //@import './components/misc/_progressbar';
   //@import './components/misc/_progressspinner';
-  //@import './components/misc/_scrolltop';
+  @import './components/misc/_scrolltop';
   //@import './components/misc/_skeleton';
   //@import './components/misc/_tag';
   //@import './components/misc/_terminal';
