--- a/dashboard/app/src/main.css
+++ b/dashboard/app/src/main.css
@@ -9,23 +9,6 @@
   @tailwind utilities;
 }
 
-/*
-PrimeVue is designed for 14px, but TailwindUI and TailwindCss assume default 16 px.
-We use custom theme for PrimeVue, so, we don't set em to 14px as is required in general for PrimeVue.
-It allows us to use TailwindUI as is without any changes in sizes.
-*/
-
-.v-popper--theme-info .v-popper__inner {
-  background: #ffffff;
-  color: rgb(107 114 128);
-  border: 1px rgb(107 114 128) solid;
-}
-
-.v-popper--theme-info .v-popper__arrow-outer {
-  color: rgb(107 114 128);
-}
-
-.v-popper--theme-info .v-popper__arrow-inner {
-  visibility: visible;
-  color: white;
+.p-tooltip {
+  @apply text-sm;
 }
