Update primevue to 3.48

--- a/dashboard/app/prime-theme/themes/aura/aura-light/extensions/_dropdown.scss
+++ b/dashboard/app/prime-theme/themes/aura/aura-light/extensions/_dropdown.scss
@@ -14,3 +14,14 @@
         }
     }
 }
+
+.p-dropdown-panel {
+    .p-dropdown-items {
+        .p-dropdown-item {
+            .p-dropdown-check-icon {
+                margin-left: -0.375rem;
+                margin-right: 0.375rem;
+            }
+        }
+    }
+}
