--- a/dashboard/app/prime-theme/themes/aura/aura-light/extensions/_inlinemessage.scss
+++ b/dashboard/app/prime-theme/themes/aura/aura-light/extensions/_inlinemessage.scss
@@ -21,3 +21,11 @@
 .p-inline-message.p-inline-message-error {
     box-shadow: 0px 4px 8px 0px rgba(239, 68, 68, 0.04);
 }
+
+.p-inline-message.p-inline-message-secondary {
+    box-shadow: 0px 4px 8px 0px rgba(74, 85, 103, 0.04);
+}
+
+.p-inline-message.p-inline-message-contrast {
+    box-shadow: 0px 4px 8px 0px rgba(2, 6, 23, 0.04);
+}
