--- a/dashboard/app/prime-theme/theme-base/components/input/_inputtext.scss
+++ b/dashboard/app/prime-theme/theme-base/components/input/_inputtext.scss
@@ -1,3 +1,14 @@
+// core
+.p-fluid .p-inputtext {
+    width: 100%;
+}
+
+.p-fluid .p-input-icon-left,
+.p-fluid .p-input-icon-right {
+    width: 100%;
+}
+
+// theme
 .p-inputtext {
     //font-family: var(--font-family);
     //font-feature-settings: var(--font-feature-settings, normal);
@@ -21,6 +32,18 @@
 
     &.p-invalid.p-component {
         @include invalid-input();
+    }
+
+    &.p-variant-filled {
+        background-color: $inputFilledBg;
+
+        &:enabled:hover {
+            background-color: $inputFilledHoverBg;
+        }
+
+        &:enabled:focus {
+            background-color: $inputFilledFocusBg;
+        }
     }
 
     &.p-inputtext-sm {
@@ -59,7 +82,7 @@
 }
 
 .p-input-icon-right > svg:last-of-type,
-.p-input-icon-right > i:last-of-type  {
+.p-input-icon-right > i:last-of-type {
     right: nth($inputPadding, 2);
     color: $inputIconColor;
 }
@@ -69,8 +92,8 @@
 }
 
 @include placeholder {
-    color: $inputPlaceholderTextColor
-};
+    color: $inputPlaceholderTextColor;
+}
 
 .p-input-filled {
     .p-inputtext {
@@ -79,7 +102,7 @@
         &:enabled:hover {
             background-color: $inputFilledHoverBg;
         }
-    
+
         &:enabled:focus {
             background-color: $inputFilledFocusBg;
         }
