--- a/dashboard/app/prime-theme/theme-base/components/input/_treeselect.scss
+++ b/dashboard/app/prime-theme/theme-base/components/input/_treeselect.scss
@@ -1,5 +1,58 @@
-@use 'sass:math';
+@use "sass:math";
 
+// core
+.p-treeselect {
+    display: inline-flex;
+    cursor: pointer;
+    user-select: none;
+}
+
+.p-treeselect-trigger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.p-treeselect-label-container {
+    overflow: hidden;
+    flex: 1 1 auto;
+    cursor: pointer;
+}
+
+.p-treeselect-label {
+    display: block;
+    white-space: nowrap;
+    cursor: pointer;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.p-treeselect-label-empty {
+    overflow: hidden;
+    visibility: hidden;
+}
+
+.p-treeselect-token {
+    cursor: default;
+    display: inline-flex;
+    align-items: center;
+    flex: 0 0 auto;
+}
+
+.p-treeselect .p-treeselect-panel {
+    min-width: 100%;
+}
+
+.p-treeselect-items-wrapper {
+    overflow: auto;
+}
+
+.p-fluid .p-treeselect {
+    display: flex;
+}
+
+// theme
 .p-treeselect {
     background: $inputBg;
     border: $inputBorder;
@@ -13,6 +66,18 @@
 
     &:not(.p-disabled).p-focus {
         @include focused-input();
+    }
+
+    &.p-variant-filled {
+        background: $inputFilledBg;
+
+        &:not(.p-disabled):hover {
+            background-color: $inputFilledHoverBg;
+        }
+
+        &:not(.p-disabled).p-focus {
+            background-color: $inputFilledFocusBg;
+        }
     }
 
     .p-treeselect-label {
