--- a/dashboard/app/prime-theme/themes/aura/aura-light/extensions/_toast.scss
+++ b/dashboard/app/prime-theme/themes/aura/aura-light/extensions/_toast.scss
@@ -4,8 +4,7 @@
 
         .p-toast-message-content {
             .p-toast-detail {
-                color: $textColor;
-                font-size: .875rem;
+                font-size: 0.875rem;
             }
         }
 
@@ -23,6 +22,10 @@
     .p-toast-message.p-toast-message-info {
         box-shadow: 0px 4px 8px 0px rgba(59, 130, 246, 0.04);
 
+        .p-toast-detail {
+            color: $textColor;
+        }
+
         .p-toast-icon-close {
             outline-color: $infoMessageIconColor;
 
@@ -34,6 +37,10 @@
 
     .p-toast-message.p-toast-message-success {
         box-shadow: 0px 4px 8px 0px rgba(34, 197, 94, 0.04);
+
+        .p-toast-detail {
+            color: $textColor;
+        }
 
         .p-toast-icon-close {
             outline-color: $successMessageIconColor;
@@ -47,6 +54,10 @@
     .p-toast-message.p-toast-message-warn {
         box-shadow: 0px 4px 8px 0px rgba(234, 179, 8, 0.04);
 
+        .p-toast-detail {
+            color: $textColor;
+        }
+
         .p-toast-icon-close {
             outline-color: $warningMessageIconColor;
 
@@ -58,12 +69,40 @@
 
     .p-toast-message.p-toast-message-error {
         box-shadow: 0px 4px 8px 0px rgba(239, 68, 68, 0.04);
-        
+
+        .p-toast-detail {
+            color: $textColor;
+        }
+
         .p-toast-icon-close {
             outline-color: $errorMessageIconColor;
 
             &:hover {
                 background: #fee2e2;
+            }
+        }
+    }
+
+    .p-toast-message.p-toast-message-secondary {
+        box-shadow: 0px 4px 8px 0px rgba(74, 85, 103, 0.04);
+
+        .p-toast-icon-close {
+            outline-color: $errorMessageIconColor;
+
+            &:hover {
+                background: $secondaryButtonHoverBg;
+            }
+        }
+    }
+
+    .p-toast-message.p-toast-message-contrast {
+        box-shadow: 0px 4px 8px 0px rgba(2, 6, 23, 0.04);
+
+        .p-toast-icon-close {
+            outline-color: $errorMessageIconColor;
+
+            &:hover {
+                background: $contrastButtonHoverBg;
             }
         }
     }
