Provide calendar for date selection

--- a/dashboard/app/prime-theme/theme-base/_components.scss
+++ b/dashboard/app/prime-theme/theme-base/_components.scss
@@ -8,7 +8,7 @@
 
     //Input
     @import './components/input/_autocomplete';
-    //@import './components/input/_calendar';
+    @import './components/input/_calendar';
     //@import './components/input/_cascadeselect';
     @import './components/input/_checkbox';
     @import './components/input/_chips';
