--- a/dashboard/app/prime-theme/themes/aura/aura-light/extensions/_inputswitch.scss
+++ b/dashboard/app/prime-theme/themes/aura/aura-light/extensions/_inputswitch.scss
@@ -9,4 +9,13 @@
             transform: none;
         }
     }
+
+    &.p-invalid > .p-inputswitch-slider {
+        background: $errorColor;
+
+
+        &:before {
+            background: $shade000;
+        }
+    }
 }
