--- a/dashboard/app/prime-theme/theme-base/_mixins.scss
+++ b/dashboard/app/prime-theme/theme-base/_mixins.scss
@@ -101,11 +101,26 @@
     
                 .p-menuitem-link {
                     .p-menuitem-text {
-                        color: $menuitemTextFocusColor;
+                        color: $menuitemTextHoverColor;
                     }
                 
                     .p-menuitem-icon, .p-submenu-icon {
-                        color: $menuitemIconFocusColor;
+                        color: $menuitemTextHoverColor;
+                    }
+                }
+
+                &:hover {
+                    color: $menuitemTextHoverColor;
+                    background: $menuitemHoverBg;
+        
+                    .p-menuitem-link {
+                        .p-menuitem-text {
+                            color: $menuitemTextHoverColor;
+                        }
+        
+                        .p-menuitem-icon, .p-submenu-icon {
+                            color: $menuitemIconHoverColor;
+                        }
                     }
                 }
             }
