--- a/dashboard/app/prime-theme/theme-base/components/overlay/_confirmpopup.scss
+++ b/dashboard/app/prime-theme/theme-base/components/overlay/_confirmpopup.scss
@@ -7,7 +7,7 @@
 }
 
 .p-confirm-popup-flipped {
-    margin-top: 0;
+    margin-top: -10px;
     margin-bottom: 10px;
 }
 
@@ -96,13 +96,13 @@
     }
 
     &:after {
-        border: solid transparent;
+        border-style: solid;
         border-color: rgba($overlayContentBg, 0);
         border-bottom-color: $overlayContentBg;
     }
 
     &:before {
-        border: solid transparent;
+        border-style: solid;
 
         @if (nth($overlayContentBorder, 2) == 'none') {
             border-color: rgba($overlayContentBg, 0);
