--- a/dashboard/app/prime-theme/theme-base/components/panel/_divider.scss
+++ b/dashboard/app/prime-theme/theme-base/components/panel/_divider.scss
@@ -36,28 +36,30 @@
     content: '';
 }
 
-.p-divider-solid.p-divider-horizontal:before {
-    border-top-style: solid;
-}
-
-.p-divider-solid.p-divider-vertical:before {
-    border-left-style: solid;
-}
-
-.p-divider-dashed.p-divider-horizontal:before {
-    border-top-style: dashed;
-}
-
-.p-divider-dashed.p-divider-vertical:before {
-    border-left-style: dashed;
-}
-
-.p-divider-dotted.p-divider-horizontal:before {
-    border-top-style: dotted;
-}
-
-.p-divider-dotted.p-divider-vertical:before {
-    border-left-style: dotted;
+.p-divider {
+    &.p-divider-solid.p-divider-horizontal:before {
+        border-top-style: solid;
+    }
+    
+    &.p-divider-solid.p-divider-vertical:before {
+        border-left-style: solid;
+    }
+    
+    &.p-divider-dashed.p-divider-horizontal:before {
+        border-top-style: dashed;
+    }
+    
+    &.p-divider-dashed.p-divider-vertical:before {
+        border-left-style: dashed;
+    }
+    
+    &.p-divider-dotted.p-divider-horizontal:before {
+        border-top-style: dotted;
+    }
+    
+    &.p-divider-dotted.p-divider-vertical:before {
+        border-left-style: dotted;
+    }
 }
 
 // theme
