--- a/dashboard/app/prime-theme/themes/aura/aura-light/extensions/_extensions.scss
+++ b/dashboard/app/prime-theme/themes/aura/aura-light/extensions/_extensions.scss
@@ -69,12 +69,12 @@ $inputShadow: 0 0 #0000, 0 0 #0000, 0 1px 2px 0 rgba(18, 18, 23, 0.05);
     @import "./_slider";
     @import "./_speeddial";
     @import "./_splitter";
+    @import "./_stepper";
     @import "./_steps";
     @import "./_tabmenu";
     @import "./_tabview";
     @import "./_tag";
     @import "./_terminal";
-    @import "./_textarea";
     @import "./_timeline";
     @import "./_toast";
     @import "./_togglebutton";
