Add icons to the machines

--- a/dashboard/app/prime-theme/theme-base/components/data/_tree.scss
+++ b/dashboard/app/prime-theme/theme-base/components/data/_tree.scss
@@ -109,7 +109,7 @@
                 //}
                 //
                 .p-treenode-icon {
-                //    margin-right: $inlineSpacing;
+                    margin-right: $inlineSpacing;
                     color: $treeNodeIconColor;
                 }
 
