Fix buttons and labels

--- a/dashboard/new-dashboard/src/primevue-theme/button.css
+++ b/dashboard/new-dashboard/src/primevue-theme/button.css
@@ -7,7 +7,13 @@
   @apply leading-4;
 }
 
+.p-button-icon-only {
+  @apply p-2;
+}
 
+.p-button-icon-only.p-button-rounded {
+  box-shadow: unset;
+}
 
 .p-button-text {
   @apply border-transparent bg-transparent;
