--- a/dashboard/new-dashboard/src/primevue-theme/misc.css
+++ b/dashboard/new-dashboard/src/primevue-theme/misc.css
@@ -18,7 +18,7 @@
   right: calc((-1 * 1.25rem) / 2);
 }
 
-.p-button, .p-select-overlay, .p-multiselect-overlay, .p-treeselect-overlay, .p-inputtext, .p-tieredmenu {
+.p-button, .p-select-overlay, .p-multiselect-overlay, .p-treeselect-overlay, .p-inputtext, .p-tieredmenu, .p-button-label {
   font-family: "Inter var", sans-serif;
   font-feature-settings: "cv02", "cv03", "cv04", "cv11";
   font-variation-settings: normal;
