--- a/dashboard/new-dashboard/src/primevue-theme/misc.css
+++ b/dashboard/new-dashboard/src/primevue-theme/misc.css
@@ -18,12 +18,6 @@
   right: calc((-1 * 1.25rem) / 2);
 }
 
-.p-button,
-.p-select-overlay,
-.p-multiselect-overlay,
-.p-treeselect-overlay,
-.p-inputtext,
-.p-tieredmenu,
-.p-button-label {
-  font-size: 0.875rem;
+.p-button, .p-select-overlay, .p-multiselect-overlay, .p-treeselect-overlay, .p-inputtext, .p-tieredmenu, .p-button-label {
+  font-size: .875rem;
 }
