--- a/dashboard/app/src/main.css
+++ b/dashboard/app/src/main.css
@@ -25,4 +25,5 @@ html {
   font-family: "Inter var", sans-serif;
   font-feature-settings: "cv02", "cv03", "cv04", "cv11";
   font-variation-settings: normal;
+  font-size: 14px;
 }
