--- a/dashboard/new-dashboard/src/primevue-theme/menubar.css
+++ b/dashboard/new-dashboard/src/primevue-theme/menubar.css
@@ -2,7 +2,7 @@
 
 /* as TailwindUI Dropdown - https://tailwindui.com/components/application-ui/elements/dropdowns */
 .p-menubar .p-menuitem-link {
-  @apply text-gray-900 px-4 py-2 text-sm select-none focus:outline-none;
+  @apply text-gray-900 px-4 py-2 select-none focus:outline-none;
 }
 
 .p-menubar .p-submenu-list {
@@ -20,7 +20,7 @@
 
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link {
   @apply text-gray-900 hover:bg-gray-50 hover:text-gray-900;
-  @apply rounded-md py-2 px-3 text-sm font-medium;
+  @apply rounded-md py-2 px-3 font-medium;
 }
 
 .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link.p-menuitem-active > .p-menuitem-link {
@@ -32,13 +32,3 @@
   @apply ml-2 text-gray-400;
 }
 
-/*
-
-     <nav class="hidden lg:py-2 lg:flex lg:space-x-8" aria-label="Global">
-        <a v-for="item in navigation" :key="item.name" :href="item.href"
-        :class="[item.current ? 'bg-gray-100 text-gray-900' : 'text-gray-900 hover:bg-gray-50 hover:text-gray-900', 'rounded-md py-2 px-3 inline-flex items-center text-sm font-medium']" :aria-current="item.current ? 'page' : undefined">
-          {{ item.name }}
-        </a>
-      </nav>
-
-*/
