--- a/dashboard/new-dashboard/src/primevue-theme/toolbar.css
+++ b/dashboard/new-dashboard/src/primevue-theme/toolbar.css
@@ -1,6 +1,6 @@
 .p-toolbar {
   /*background: var(--panel-header-bg);*/
-  @apply rounded-lg border border-gray-300 py-2 px-3 bg-gray-50 text-sm;
+  @apply rounded-lg border border-gray-300 py-2 px-3 bg-gray-50 ;
 }
 
 .p-toolbar .p-toolbar-start,
