Make text color unified
This will easy transition to dark theme

--- a/dashboard/new-dashboard/src/primevue-theme/select-panel.css
+++ b/dashboard/new-dashboard/src/primevue-theme/select-panel.css
@@ -57,12 +57,5 @@ Styling in Tailwind UI way requires as result a lot of efforts, but PrimeVue des
 
 .p-tree-toggler-icon {
   /* same color as p-treeselect-trigger */
-  @apply text-gray-400 pr-0.5;
-}
-
-.p-tree-toggler-icon:hover {
-  @apply text-gray-500;
-}
-
-.p-treenode-label {
+  @apply pr-0.5;
 }
