--- a/dashboard/app/theme/menubar.css
+++ b/dashboard/app/theme/menubar.css
@@ -1,12 +1,15 @@
 /* With centered search and secondary links */
 
 /* as TailwindUI Dropdown - https://tailwindui.com/components/application-ui/elements/dropdowns */
+
+@reference "../src/main.css";
+
 .p-menubar .p-menuitem-link {
   @apply text-gray-900 px-4 py-2 select-none focus:outline-none;
 }
 
 .p-menubar .p-submenu-list {
-  @apply mt-2 py-1 rounded-md shadow-lg bg-white w-56 ring-1 ring-black ring-opacity-5 focus:outline-none;
+  @apply mt-2 py-1 rounded-md shadow-lg bg-white w-56 ring-1 ring-black ring-black/50 focus:outline-none;
 }
 
 .p-menubar .p-menuitem-link:not(.p-disabled):hover {
