--- a/dashboard/app/theme/select-panel.css
+++ b/dashboard/app/theme/select-panel.css
@@ -1,10 +1,12 @@
+@reference "../src/main.css";
+
 .p-select-panel,
 .p-treeselect-panel,
 .p-multiselect-panel,
 .p-autocomplete-panel {
   background: var(--input-overlay-bg);
   /* No space between element and pop-up in PrimeVue, but TailwindUI uses mt-1 and that's looks better */
-  @apply rounded-md shadow-lg mt-1 ring-1 ring-black ring-opacity-5 text-gray-900 focus:outline-none overflow-auto cursor-default select-none;
+  @apply rounded-md shadow-lg mt-1 ring-1 ring-black ring-black/50 text-gray-900 focus:outline-none overflow-auto cursor-default select-none;
 }
 
 /* here filter for multiselect is located */
