--- a/dashboard/app/src/main.css
+++ b/dashboard/app/src/main.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+@source "../../new-dashboard/src";
+
 @layer theme, tailwind-base, primevue, tailwind-utilities;
 
 @custom-variant dark (&:where(.dark-mode, .dark-mode *));
